--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,6 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Document
   body
-    h2 Phaser Demo
+    h2 Demo
     script(src="phaser.js")
     script(src="script.js")
